--- a/2024.md
+++ b/2024.md
@@ -1,5 +1,30 @@
 Copyright 2024 SivaKrishna Thumma
 
-You may modify the software, use, sell, sublicense or otherwise deal it for private or commercial purposes, as long as you include the copyright and permission notices in all copies or substantial portions of the software.You may add your own copyright statement to your modifications and sublicense the modified work under additional or different license terms. This is a summary of the MIT license and does not constitute legal advice. But Uipath,UiPath Go,Uipath Connect,UiPath MarketPlace and UiPath Team are only authorized to use my components in videos at youtube channel
+You may modify the software, use, sell, sublicense or otherwise deal it for private or commercial purposes, as long as you include the copyright and permission notices in all copies or substantial portions of the software.You may add your own copyright statement to your modifications and sublicense the modified work under additional or different license terms. This is a summary of the MIT license and does not constitute legal advice. But Uipath,UiPath Go,Uipath Connect,UiPath MarketPlace and UiPath Team are only authorized to use my components.
 
-The License Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the 'Software'), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, (This does not apply to my component appears in the videos uploaded without obtaining my permission except Uipath, UiPath Go, Uipath Connect, and UiPath Team as stated early.) DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+Licensor grants Licensee a non-exclusive, non-transferable license to use the Software in accordance with the terms set forth in this Agreement.
+
+Licensee may install and use the Software
+
+The Software may be used for personal, educational, or commercial purposes.
+
+Licensee shall not distribute, lease, sublicense, or sell the Software.
+Licensee shall not modify, reverse engineer, decompile, or disassemble the Software.
+Licensee shall not remove or alter any proprietary notices on the Software.
+
+Licensor retains all right, title, and interest in and to the Software, including all intellectual property rights.
+
+This Agreement is effective until terminated.
+Licensee may terminate this Agreement by destroying all copies of the Software.
+Licensor may terminate this Agreement if Licensee breaches any of the terms. Upon termination, Licensee must destroy all copies of the Software.
+
+Licensor may provide updates or support for the Software at its discretion.
+Any updates provided shall be subject to the terms of this Agreement.
+
+To the maximum extent permitted by applicable law, Licensor shall not be liable for any damages arising out of the use or inability to use the Software, even if Licensor has been advised of the possibility of such damages.
+
+The Software is provided "as is," without warranty of any kind. Licensor disclaims all warranties, whether express, implied, or statutory, including but not limited to implied warranties of merchantability, fitness for a particular purpose, and non-infringement.
+
+This Agreement shall be governed by and construed in accordance with the laws of [Jurisdiction].
+
+This Agreement constitutes the entire agreement between the parties with respect to the Software and supersedes all prior or contemporaneous understandings regarding such subject matter.
